--- a/Site/itsite/templates/itsite/home.html
+++ b/Site/itsite/templates/itsite/home.html
@@ -29,19 +29,19 @@
         <section class="section second-section">
             <div class="section-content">
                 <div class="features">
-                    <div class="feature" data-anime="left">
+                    <div class="feature" data-anime="left" style="margin-bottom: 20px;">
                         <i class="fas fa-check"></i>
-                        <h1>High Quality</h1>
+                        <h4>High Quality</h4>
                         <p class="paragraph">We are perfectionists in every thing we do.</p>
                     </div>
                     <div class="feature" data-anime="right">
                         <i class="fas fa-hands-helping"></i>
-                        <h1>Amazing Support</h1>
+                        <h4>Amazing Support</h4>
                         <p class="paragraph">We give long term support for our clients.</p>
                     </div>
-                    <div class="feature" data-anime="left">
+                    <div class="feature" data-anime="left" style="margin-top: 20px;">
                         <i class="fas fa-chart-line"></i>
-                        <h1>For small businesses</h1>
+                        <h4>For small businesses</h4>
                         <p class="paragraph">Our primarily focus are small businesses and individuals.</p>
                     </div>
                 </div>
@@ -51,8 +51,8 @@
         <section class="section third-section">
             <div class="section-content">
                 <div style="text-align: center;" data-anime>
-                    <h1>A wide variety of technologies</h1>
-                    <p class="paragraph" style="margin-bottom: 50px;"><span id="stacks">Python</span></p>
+                    <h4>A wide variety of technologies</h4>
+                    <p class="paragraph" style="margin-bottom: 20px;"><span id="stacks">Python</span></p>
                     <a class="cta" href="#">TALK TO US</a>
                 </div>
             </div>
