--- a/Site/itsite/static/itsite/css/styles.css
+++ b/Site/itsite/static/itsite/css/styles.css
@@ -53,6 +53,10 @@ a {
   text-decoration: none;
 }
 
+a:hover {
+  text-decoration: none;
+}
+
 ul {
   list-style-type: none;
 }
@@ -214,4 +218,17 @@ footer i {
 [data-anime].animate {
   opacity: 1;
   transform: translate3d(0px, 0px, 0px);
+}
+
+
+/*Form*/
+.form {
+  max-width: 50%;
+  margin: 50px auto;
+}
+
+@media only screen and (max-width: 600px) {
+  .form {
+    max-width: 90%;
+  }
 }
