--- a/Site/itsite/templates/itsite/index.html
+++ b/Site/itsite/templates/itsite/index.html
@@ -11,7 +11,7 @@
 
     {% block title %}
     {% endblock %}
-
+    <link rel="stylesheet" href="../../static/itsite/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="../../static/itsite/css/navbar.css">
     <link rel="stylesheet" href="../../static/itsite/css/styles.css">
@@ -31,13 +31,24 @@
                 <span id="hamburger"></span>
               </button>
               <ul id="menu" role="menu">
-                <li><a href="/">Sobre</a></li>
-                <li><a href="/">Produtos</a></li>
-                <li><a href="/">Portfólio</a></li>
-                <li><a href="/">Contato</a></li>
+                <li><a href="{% url 'apply' %}">Apply</a></li>
+                <li><a href="/">Hire</a></li>
+                <li><a href="/">Contact</a></li>
+                <li><a href="/">About</a></li>
               </ul>
             </nav>
           </header>
+
+
+            <div class="container">
+              {% if messages %}
+                {% for message in messages %}
+                <div class="alert alert-{{ message.tags }}">
+                    {{ message }}
+                </div>
+                {% endfor %}
+              {% endif %}
+            </div>
 
             <div style="min-height: 100vh">
                 {% block content %}
@@ -65,6 +76,9 @@
 
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script type="text/javascript" src="../../static/itsite/js/navbar.js"></script>
+        <script type="text/javascript" src="../../static/itsite/js/popper.min.js"></script>
+        <script type="text/javascript" src="../../static/itsite/js/bootstrap.min.js"></script>
+
     {% block js %}
 
     {% endblock %}
