--- a/Site/itsite/templates/itsite/index.html
+++ b/Site/itsite/templates/itsite/index.html
@@ -25,15 +25,14 @@
 
         <!-- HEADER -->
           <header id="header">
-            <a id="logo" href="">Logo</a>
+            <a id="logo" href="{% url 'home' %}">ITIgnition</a>
             <nav id="nav">
               <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
                 <span id="hamburger"></span>
               </button>
               <ul id="menu" role="menu">
-                <li><a href="{% url 'apply' %}">Apply</a></li>
-                <li><a href="/">Hire</a></li>
-                <li><a href="/">Contact</a></li>
+                <li><a href="{% url 'apply' %}">Apply for a job</a></li>
+                <li><a href="{% url 'hire' %}">Request Service</a></li>
                 <li><a href="/">About</a></li>
               </ul>
             </nav>
