--- a/Site/itsite/templates/itsite/thankyou.html
+++ b/Site/itsite/templates/itsite/thankyou.html
@@ -3,7 +3,7 @@
 
     <div style="max-width: 70%; margin: 0 auto; text-align: center; font-weight: 400">
         <h1>Thank You</h1>
-        <p>Your message was sent sucessfully. We will get in touch with you very soon.</p>
+        <p>Your form was submited sucessfully. We will get in touch with you soon.</p>
         <a class="cta" href="{% url 'home' %}">Home</a>
     </div>
 
