--- a/Site/itsite/templates/itsite/home.html
+++ b/Site/itsite/templates/itsite/home.html
@@ -12,8 +12,8 @@
 
             <div class="section-content" style="display: flex; align-items: center; justify-content: space-between;">
                 <div class="title-with-paragraph" style="margin-top: 100px;">
-                    <h1 class="big-title">Needing a good developer?</h1>
-                    <p class="paragraph">We have a team of a wide variety of very talented developers that helps individuals and small businesses solve problems and thrive.</p>
+                    <h1 class="big-title">Needing a Good Developer?</h1>
+                    <p class="paragraph">We have a team of a wide variety of talented developers that helps individuals and small businesses solve problems and thrive.</p>
                     <br>
                     <br>
                     <a class="cta" href="{% url 'hire' %}">TALK TO US</a>
@@ -31,17 +31,17 @@
                 <div class="features">
                     <div class="feature" data-anime="left">
                         <i class="fas fa-check"></i>
-                        <h4>High Quality</h4>
+                        <h5>High Quality</h5>
                         <p class="paragraph">We are perfectionists in every thing we do.</p>
                     </div>
                     <div class="feature" data-anime="right">
                         <i class="fas fa-hands-helping"></i>
-                        <h4>Amazing Support</h4>
+                        <h5>Amazing Support</h5>
                         <p class="paragraph">We give long term support for our clients.</p>
                     </div>
                     <div class="feature" data-anime="left">
                         <i class="fas fa-chart-line"></i>
-                        <h4>For small businesses</h4>
+                        <h5>For small businesses</h5>
                         <p class="paragraph">Our primarily focus are small businesses and individuals.</p>
                     </div>
                 </div>
@@ -50,7 +50,7 @@
 
         <section class="section forth-section">
             <div class="section-content">
-                <div data-anime="left" style="max-width: 600px;">
+                <div class="section-content2" data-anime="left">
                     <h2>About Us</h2>
                     <p>
                         We are a multidisciplinary software house from Lisbon.
@@ -60,9 +60,31 @@
             </div>
         </section>
 
+        <section class="section fitht-section">
+            <div class="section-content" style="background-image: linear-gradient(90deg, #8DA3EB, #BFCAEE); color: white">
+                <div class="section-content2">
+                    <img src="../../static/itsite/img/PNG/Objects/Laptop.png" style="height: 48px;">
+                    <p>
+                        Have a product that need some help or a vision to change the world?
+                        Whatever problems you have, we’d love to hear about it.
+                    </p>
+                    <br>
+                    <img src="../../static/itsite/img/PNG/Objects/phone.png" style="height: 48px;">
+                    <p>
+                        You’ll be always in touch with a project manager with updates provided and questions answered at every phase of the project.
+                    </p>
+                    <br>
+                    <img src="../../static/itsite/img/PNG/Objects/rocket.png" style="height: 48px;">
+                    <p>Our mission is to empower people and customers to achieve the best results</p>
+                    <br>
+                </div>
+
+            </div>
+        </section>
+
         <section class="section third-section">
             <div class="section-content">
-                <div style="text-align: center;" data-anime>
+                <div class="section-content2" data-anime>
                     <h3>A wide variety of technologies</h3>
                     <p style="margin-bottom: 20px;"><span id="stacks">Python</span></p>
                     <a class="cta" href="{% url 'hire' %}">TALK TO US</a>
