--- a/Site/itsite/templates/itsite/home.html
+++ b/Site/itsite/templates/itsite/home.html
@@ -61,14 +61,8 @@
         </section>
 
         <section class="section fitht-section">
-            <div class="section-content" style="background-image: linear-gradient(90deg, #8DA3EB, #BFCAEE); color: white">
+            <div class="section-content">
                 <div class="section-content2">
-                    <img src="../../static/itsite/img/PNG/Objects/Laptop.png" style="height: 48px;">
-                    <p>
-                        Have a product that need some help or a vision to change the world?
-                        Whatever problems you have, we’d love to hear about it.
-                    </p>
-                    <br>
                     <img src="../../static/itsite/img/PNG/Objects/phone.png" style="height: 48px;">
                     <p>
                         You’ll be always in touch with a project manager with updates provided and questions answered at every phase of the project.
