--- a/Site/itsite/templates/itsite/home.html
+++ b/Site/itsite/templates/itsite/home.html
@@ -1,7 +1,7 @@
 {% extends "itsite/index.html" %}
 
     {% block title %}
-        <title>ItIgnition - We create digital solutions for businesses</title>
+        <title>ShineIT - We create digital solutions for businesses</title>
     {% endblock %}
 
     {% block content %}
