--- a/Site/itsite/templates/itsite/index.html
+++ b/Site/itsite/templates/itsite/index.html
@@ -25,7 +25,7 @@
 
         <!-- HEADER -->
           <header id="header">
-            <a id="logo" href="{% url 'home' %}">ITIgnition</a>
+            <a id="logo" href="{% url 'home' %}">ShineIT</a>
             <nav id="nav">
               <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
                 <span id="hamburger"></span>
@@ -67,7 +67,7 @@
 
                 <div class="footer-info">
                     <div class="rights">
-                        <p>&copy; 2021 ITIgnition</p>
+                        <p>&copy; 2021 ShineIT</p>
                     </div>
                 </div>
             </div>
