--- a/Site/itsite/templates/itsite/jobs.html
+++ b/Site/itsite/templates/itsite/jobs.html
@@ -1,4 +1,9 @@
 {% extends 'itsite/index.html' %}
+
+{% block title %}
+    <title>ShineIT - Jobs</title>
+{% endblock %}
+
 {% block content %}
 
 <div class="container">
