--- a/Site/itsite/templates/itsite/thankyou.html
+++ b/Site/itsite/templates/itsite/thankyou.html
@@ -1,4 +1,9 @@
 {% extends 'itsite/index.html' %}
+
+{% block title %}
+    <title>ShineIT - Thank You</title>
+{% endblock %}
+
 {% block content %}
 
     <div style="max-width: 70%; margin: 0 auto; text-align: center; font-weight: 400">
