--- a/Site/itsite/templates/itsite/apply.html
+++ b/Site/itsite/templates/itsite/apply.html
@@ -1,5 +1,10 @@
 {% extends 'itsite/index.html' %}
 {% load crispy_forms_tags %}
+
+{% block title %}
+    <title>ShineIT - Apply</title>
+{% endblock %}
+
 {% block content %}
     <div class="form">
     <h2>Apply for a job</h2>
