--- a/Site/itsite/templates/itsite/calculator.html
+++ b/Site/itsite/templates/itsite/calculator.html
@@ -1,18 +1,23 @@
 {% extends 'itsite/index.html' %}
+
+{% block title %}
+    <title>ShineIT - Calculator</title>
+{% endblock %}
+
 {% block content %}
 
 <div class="container">
     <h2>Earnings Calculator</h2>
     <div style="display: flex; flex-flow: column; height: 50vh; justify-content: space-around; margin-top: 90px;">
         <label for="price">Job's price</label>
-        <input class="form-control" id="price" name="" value="350">
-        <label for="upw">After Upwork's Cut</label>
-        <input class="form-control" id="upw" name="" disabled>
-        <label for="dev">Developer's Earning (70%)</label>
+        <input class="form-control" id="price" name="" value="250">
+        <label for="upw" style="display: none;">After Upwork's Cut</label>
+        <input class="form-control" id="upw" name="" disabled style="display: none;">
+        <label for="dev">Developer's Earning</label>
         <input class="form-control" id="dev" name="" disabled>
-        <label for="kev">Gudo's Earning (18%)</label>
+        <label for="kev">Gudo's Earning</label>
         <input class="form-control" id="kev" name="" disabled>
-        <label for="han">Hans's Earning (12%)</label>
+        <label for="han">Hans's Earning</label>
         <input class="form-control" id="han" name="" disabled>
         <button class="cta" onclick="calculate()" style="width: 200px; margin-top: 10px;">Calculate</button>
     </div>
