--- a/Site/itsite/templates/itsite/hire.html
+++ b/Site/itsite/templates/itsite/hire.html
@@ -1,5 +1,10 @@
 {% extends 'itsite/index.html' %}
 {% load crispy_forms_tags %}
+
+{% block title %}
+    <title>ShineIT - Contact Us</title>
+{% endblock %}
+
 {% block content %}
     <div class="form">
         <form method="POST" enctype="multipart/form-data">
