Added a few meta tags in html header

--- a/Site/itsite/templates/itsite/index.html
+++ b/Site/itsite/templates/itsite/index.html
@@ -7,7 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- <link rel="icon" type="image/png" href="img/favicon.png" /> -->
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Shineit is a software house that ignite the results of businesses with passion, shine and tech.">
+    <meta name="author" content="ShineIT">
+
+    <!-- OG Meta Tags to improve the way the post looks when you share the page on Facebook, Twitter, LinkedIn -->
+    <meta property="og:site_name" content="Shineit" /> <!-- website name -->
+    <meta property="og:site" content="" /> <!-- website link -->
+    <meta property="og:title" content=""/> <!-- title shown in the actual shared post -->
+    <meta property="og:description" content="" /> <!-- description shown in the actual shared post -->
+    <meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
+    <meta property="og:url" content="" /> <!-- where do you want your post to link to -->
+    <meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
+
+    <link rel="icon" type="image/png" href="../../static/itsite/img/FAVICON/favicon-16x16.png" />
 
     {% block title %}
     {% endblock %}
