Major Design and SEO improvements

--- a/Site/itsite/static/itsite/css/styles.css
+++ b/Site/itsite/static/itsite/css/styles.css
@@ -27,7 +27,7 @@ body {
   height: auto;
   font-family: "Circular", Arial, Helvetica, sans-serif;
   overflow-x: hidden;
-  color: #4F6096;
+  color: #5B70B4;
   background-image: url(../img/PNG/Backgrounds/bg2.png);
 }
 
@@ -69,7 +69,7 @@ ul {
 }
 
 .first-section {
-  background: url("../img/PNG/Characters/man with documents.png");
+  background: url(../img/PNG/Examples/bg8-2.png);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: right;
@@ -134,10 +134,7 @@ ul {
 }
 
 .cta {
-  border: 2px solid transparent;
-  background-image: linear-gradient(90deg, #7793ED, #A5B6EC);
-  color: #fff;
-  border-radius: 36px;
+  border-radius: 6px;
   padding-right: 50px;
   padding-left: 50px;
   padding-top: 15px;
@@ -145,11 +142,32 @@ ul {
   font-weight: bold;
 }
 
-.cta:hover {
+.cta1 {
+  border: 2px solid #7793ED;
   background: transparent;
-  border-color: #7793ED;
+  box-shadow: 1px 1px 1px  #A5B6EC;
   color: #7793ED;
+}
+
+.cta1:hover {
+  border: none;
+  background-image: linear-gradient(90deg, #7793ED, #A5B6EC);
+  color: white;
   transition: 0.3s;
+}
+
+
+.cta2 {
+  border: none;
+  background-image: linear-gradient(90deg, #7793ED, #A5B6EC);
+  color: white;
+}
+
+.cta2:hover {
+  border: 2px solid #7793ED;
+  background: transparent;
+  box-shadow: 1px 1px 1px  #A5B6EC;
+  color: #7793ED;
 }
 
 
@@ -157,6 +175,11 @@ ul {
   .title-with-paragraph {
     max-width: 70%;
   }
+
+.first-section {
+  /*background: none;
+*/  font-weight: bold;
+}
 
 .feature {
   max-width: 60%;
@@ -261,4 +284,17 @@ footer i {
   .form {
     max-width: 90%;
   }
+}
+
+
+
+/*To remove inline css*/
+.first-section .section-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.section-content2 img {
+  height: 48px;
 }
