--- a/Site/itsite/templates/itsite/index.html
+++ b/Site/itsite/templates/itsite/index.html
@@ -5,26 +5,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <!-- SEO Meta Tags -->
-    <meta name="description" content="Shineit is a software house that ignite the results of businesses with passion, shine and tech.">
-    <meta name="author" content="ShineIT">
-
-    <!-- OG Meta Tags to improve the way the post looks when you share the page on Facebook, Twitter, LinkedIn -->
-    <meta property="og:site_name" content="Shineit" /> <!-- website name -->
-    <meta property="og:site" content="" /> <!-- website link -->
-    <meta property="og:title" content=""/> <!-- title shown in the actual shared post -->
-    <meta property="og:description" content="" /> <!-- description shown in the actual shared post -->
-    <meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
-    <meta property="og:url" content="" /> <!-- where do you want your post to link to -->
-    <meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
+    {% block meta %}
+    {% endblock %}
+    <meta property="og:image" content="../../static/itsite/img/bg13-1.jpg" /> <!-- image link, make sure it's jpg -->
 
     <link rel="icon" type="image/png" href="../../static/itsite/img/FAVICON/favicon-16x16.png" />
 
     {% block title %}
     {% endblock %}
+
     <link rel="stylesheet" href="../../static/itsite/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="../../static/itsite/css/navbar.css">
@@ -39,7 +30,7 @@
 
         <!-- HEADER -->
           <header id="header">
-            <a id="logo" href="{% url 'home' %}">ShineIT</a>
+            <a id="logo" href="{% url 'home' %}">Shine It</a>
             <nav id="nav">
               <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
                 <span id="hamburger"></span>
@@ -47,7 +38,7 @@
               <ul id="menu" role="menu">
                 <li><a href="{% url 'apply' %}">Apply for a job</a></li>
                 <li><a href="{% url 'hire' %}">Request Service</a></li>
-                <li><a href="/">About</a></li>
+                <!-- <li><a href="/">About</a></li> -->
               </ul>
             </nav>
           </header>
