--- a/Site/itsite/templates/itsite/jobs.html
+++ b/Site/itsite/templates/itsite/jobs.html
@@ -1,5 +1,9 @@
 {% extends 'itsite/index.html' %}
 
+{% block meta %}
+    <meta name="robots" content="noindex">
+{% endblock %}
+
 {% block title %}
     <title>ShineIT - Jobs</title>
 {% endblock %}
