--- a/Site/itsite/templates/itsite/apply.html
+++ b/Site/itsite/templates/itsite/apply.html
@@ -1,18 +1,22 @@
 {% extends 'itsite/index.html' %}
 {% load crispy_forms_tags %}
 
+{% block meta %}
+    <meta name="description" content="Shine it is hiring. Send us your cv and apply for a job position here.">
+{% endblock %}
+
 {% block title %}
     <title>ShineIT - Apply</title>
 {% endblock %}
 
 {% block content %}
     <div class="form">
-    <h2>Apply for a job</h2>
+    <h1>Apply for a job</h1>
     <p>We'll be more than happy to receive your job application. We will review it carefully and will get in toutch with you soon.</p>
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form|crispy }}
-            <button class="cta" type="submit">Submit</button>
+            <button class="cta cta2" type="submit">Submit</button>
         </form>
     </div>
 
