--- a/Site/itsite/templates/itsite/calculator.html
+++ b/Site/itsite/templates/itsite/calculator.html
@@ -1,5 +1,9 @@
 {% extends 'itsite/index.html' %}
 
+{% block meta %}
+    <meta name="robots" content="noindex">
+{% block endblock %}
+
 {% block title %}
     <title>ShineIT - Calculator</title>
 {% endblock %}
@@ -7,7 +11,7 @@
 {% block content %}
 
 <div class="container">
-    <h2>Earnings Calculator</h2>
+    <h1>Earnings Calculator</h1>
     <div style="display: flex; flex-flow: column; height: 50vh; justify-content: space-around; margin-top: 90px;">
         <label for="price">Job's price</label>
         <input class="form-control" id="price" name="" value="250">
@@ -19,7 +23,7 @@
         <input class="form-control" id="kev" name="" disabled>
         <label for="han">Hans's Earning</label>
         <input class="form-control" id="han" name="" disabled>
-        <button class="cta" onclick="calculate()" style="width: 200px; margin-top: 10px;">Calculate</button>
+        <button class="cta cta1" onclick="calculate()" style="width: 200px; margin-top: 10px;">Calculate</button>
     </div>
 </div>
 
