--- a/Site/itsite/templates/itsite/calculator.html
+++ b/Site/itsite/templates/itsite/calculator.html
@@ -2,7 +2,7 @@
 
 {% block meta %}
     <meta name="robots" content="noindex">
-{% block endblock %}
+{% endblock %}
 
 {% block title %}
     <title>ShineIT - Calculator</title>
@@ -23,7 +23,6 @@
         <input class="form-control" id="kev" name="" disabled>
         <label for="han">Hans's Earning</label>
         <input class="form-control" id="han" name="" disabled>
-        <button class="cta cta1" onclick="calculate()" style="width: 200px; margin-top: 10px;">Calculate</button>
     </div>
 </div>
 
