--- a/Site/itsite/templates/itsite/home.html
+++ b/Site/itsite/templates/itsite/home.html
@@ -66,7 +66,7 @@
                 <div class="section-content2" data-anime="left">
                     <h2>About Us</h2>
                     <p>
-                        We are a multidisciplinary software house with driven collaborates that like to work togheter to always bring the best product possible.
+                        Shine it a multidisciplinary software house with driven collaborates that like to work togheter to always bring the best product possible.
                         Our goal is to ignite the results of our clients with the power of tech let, and our spark in IT.
                     </p>
                 </div>
@@ -76,19 +76,19 @@
         <section class="section fitht-section">
             <div class="section-content">
                 <div class="section-content2" data-anime="right">
-                    <img src="../../static/itsite/img/PNG/Objects/tools.png">
+                    <img alt="tools" src="../../static/itsite/img/PNG/Objects/tools.png">
                     <p>
-                        We like to create things with good functionality. But what we enjoy even more is creating those things with a beautiful UI/UX, that users like to see.
+                        We like to create things with good functionalities. But what we enjoy even more is creating those things with a beautiful UI, that users like to see.
                     </p>
                     <br>
 
-                    <img src="../../static/itsite/img/PNG/Objects/phone.png">
+                    <img alt="phone" src="../../static/itsite/img/PNG/Objects/phone.png">
                     <p>
                         As our costumer you’ll be always in touch with us with updates provided and questions answered during all stages of development.
                     </p>
                     <br>
 
-                    <img src="../../static/itsite/img/PNG/Objects/rocket.png">
+                    <img alt="rocket" src="../../static/itsite/img/PNG/Objects/rocket.png">
                     <p>
                         Our mission is to empower people and customers to achieve the best results.
                     </p>
@@ -96,6 +96,16 @@
 
                 </div>
 
+            </div>
+        </section>
+
+        <section class="section sixth-section">
+            <div class="section-content">
+                <div class="section-content2" data-anime>
+                    <h2>Are you a passionate developer?</h2>
+                    <p>Shine it is hiring passionate developers that would love to participate in the development of solutions that may turn the world a better place. If you are looking for a placement apply now, we are more than happy to receive your application!</p>
+                    <a class="cta cta3" href="{% url 'apply' %}">APPLY</a>
+                </div>
             </div>
         </section>
 
