--- a/Site/itsite/templates/itsite/index.html
+++ b/Site/itsite/templates/itsite/index.html
@@ -36,8 +36,8 @@
                 <span id="hamburger"></span>
               </button>
               <ul id="menu" role="menu">
-                <li><a href="{% url 'apply' %}">Apply for a job</a></li>
-                <li><a href="{% url 'hire' %}">Request Service</a></li>
+                <li><a href="{% url 'hire' %}">Request A Service</a></li>
+                <li><a href="{% url 'apply' %}">Work With Us</a></li>
                 <!-- <li><a href="/">About</a></li> -->
               </ul>
             </nav>
