--- a/Site/itsite/templates/itsite/apply.html
+++ b/Site/itsite/templates/itsite/apply.html
@@ -12,11 +12,11 @@
 {% block content %}
     <div class="form">
     <h1>Apply for a job</h1>
-    <p>We'll be more than happy to receive your job application. We will review it carefully and will get in toutch with you soon.</p>
+    <p>We'll be more than happy to receive your job application. We will review it carefully and will get in touch with you soon.</p>
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form|crispy }}
-            <button class="cta cta2" type="submit">Submit</button>
+            <button class="cta cta2" type="submit">Apply</button>
         </form>
     </div>
 
