Added sms alert and pdf/word upload only restriction

--- a/Site/itsite/templates/itsite/home.html
+++ b/Site/itsite/templates/itsite/home.html
@@ -67,7 +67,7 @@
                     <h2>About Us</h2>
                     <p>
                         Shine it a multidisciplinary software house with driven collaborates that like to work togheter to always bring the best product possible.
-                        Our goal is to ignite the results of our clients with the power of tech let, and our spark in IT.
+                        Our goal is to ignite the results of our clients with the power of tech and let our spark in IT.
                     </p>
                 </div>
             </div>
