--- a/Site/itsite/templates/itsite/index.html
+++ b/Site/itsite/templates/itsite/index.html
@@ -36,13 +36,12 @@
                 <span id="hamburger"></span>
               </button>
               <ul id="menu" role="menu">
-                <li><a href="{% url 'hire' %}">Request A Service</a></li>
-                <li><a href="{% url 'apply' %}">Work With Us</a></li>
+                <li><a href="{% url 'hire' %}">Talk to Us</a></li>
+                <li><a href="{% url 'jobs' %}">Carrers</a></li>
                 <!-- <li><a href="/">About</a></li> -->
               </ul>
             </nav>
           </header>
-
 
             <div class="container">
               {% if messages %}
