--- a/Site/itsite/templates/itsite/jobs.html
+++ b/Site/itsite/templates/itsite/jobs.html
@@ -10,13 +10,21 @@
 
 {% block content %}
 
-<div class="container">
-    <h1>Job Posting</h1>
-
-    {% for job in jobs %}
-        <h4>{{ job.title }}</h4>
-        <p>{{ job.content|safe }}</p>
-    {% endfor %}
+<div class="custom-container">
+    <h1>Job Offers</h1>
+    <p>See the latests job offers at Shine it.</p>
+    <div class="jobs">
+        {% for job in jobs  %}
+            <div class="job-card">
+                <p><b>{{ job.title }}</b></p>
+                <div class="flex">
+                    <p class="jobs-date">Posted: {{ job.date_posted|date:"F d, Y" }}</p>
+                    <p class="jobs-date">Location: Remote</p>
+                </div>
+                <a class="cta cta3" href="{% url 'job' job.pk %}">See</a>
+            </div>
+        {% endfor %}
+    </div>
 </div>
 
 {% endblock %}
