--- a/Site/itsite/templates/itsite/home.html
+++ b/Site/itsite/templates/itsite/home.html
@@ -1,7 +1,7 @@
 {% extends "itsite/index.html" %}
 
     {% block meta %}
-        <meta name="description" content="Shineit is a software house that ignite the results of businesses with passion, shine and tech.">
+        <meta name="description" content="Shine it is a software house that ignite the results of businesses with passion, shine and tech.">
     {% endblock %}
 
     {% block title %}
@@ -103,8 +103,8 @@
             <div class="section-content">
                 <div class="section-content2" data-anime>
                     <h2>Are you a passionate developer?</h2>
-                    <p>Shine it is hiring passionate developers that would love to participate in the development of solutions that may turn the world a better place. If you are looking for a placement apply now, we are more than happy to receive your application!</p>
-                    <a class="cta cta3" href="{% url 'apply' %}">APPLY</a>
+                    <p>We are more than happy to receive your application!</p>
+                    <a class="cta cta3" href="{% url 'jobs' %}">APPLY</a>
                 </div>
             </div>
         </section>
