--- a/Site/itsite/templates/itsite/job.html
+++ b/Site/itsite/templates/itsite/job.html
@@ -1,11 +1,11 @@
 {% extends 'itsite/index.html' %}
 
 {% block meta %}
-    <meta name="robots" content="noindex">
+        <meta name="description" content="Apply for {{ job.title }} position at Shine it">
 {% endblock %}
 
 {% block title %}
-    <title>ShineIT - Jobs</title>
+    <title>Shine it - {{ job.title }}</title>
 {% endblock %}
 
 {% block content %}
