--- a/Site/itsite/templates/itsite/hire.html
+++ b/Site/itsite/templates/itsite/hire.html
@@ -50,14 +50,14 @@
           // dropdownContainer: document.body,
           // excludeCountries: ["us"],
           // formatOnDisplay: false,
-          geoIpLookup: function(callback) {
-            $.get("http://ipinfo.io", function() {}, "jsonp").always(function(resp) {
-              var countryCode = (resp && resp.country) ? resp.country : "";
-              callback(countryCode);
-            });
-          },
+          // geoIpLookup: function(callback) {
+          //   $.get("http://ipinfo.io", function() {}, "jsonp").always(function(resp) {
+          //     var countryCode = (resp && resp.country) ? resp.country : "";
+          //     callback(countryCode);
+          //   });
+          // },
           hiddenInput: "full_number",
-          initialCountry: "auto",
+          // initialCountry: "auto",
           // localizedCountries: { 'de': 'Deutschland' },
           // nationalMode: false,
           // onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
